//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

// TODO(burdon): Rename dxos.halo?
package dxos.credentials;

import "google/protobuf/any.proto";

import "./keys.proto";

// TODO(burdon): Use default from codec-protobuf.
message Message {
  required google.protobuf.Any payload = 1;
}

/**
 * A generic container message used whenever messages are signed (e.g. PartyCredential)
 */
message SignedMessage {
  //
  // Provides the common metadata needed for all signed objects.
  //
  message Signed {
    /// RFC-3339 datetime string.
    required string created = 1;
    required bytes nonce = 2;
    /// The payload to be signed.
    required google.protobuf.Any payload = 10;
  }

  //
  // The signature data itself.
  //
  message Signature {
    /// The publicKey of the keypair that made this signature.
    required PubKey key = 1;
    /// The bytes of the signature.
    required bytes signature = 2;
    /// The certification chain of SignedMessages for this key.
    optional KeyChain keyChain = 3;
  }

  /// The signed message contents.
  required Signed signed = 1;
  /// An array of Signatures, one for each key that signed the message.
  repeated Signature signatures = 2;
}
